--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trip Tracker</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../public/styles/stylesheet.css">
-    <link rel="shortcut icon" href="../public/images/logo2.png" type="image/x-icon">
+    <link rel="stylesheet" href="/styles/stylesheet.css">
+    <link rel="shortcut icon" href="/images/logo2.png" type="image/x-icon">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <img src="../public/images/logo.png" class="nav-logo">
+            <img src="/images/logo.png" class="nav-logo">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <form class="d-flex" role="search">
@@ -34,7 +34,7 @@
         </div>
     </nav>
     <video autoplay muted loop class="bg-video">
-    <source src="../public/images/globeweb.webm" type="video/webm"></src>
+    <source src="/images/globeweb.webm" type="video/webm"></src>
     </video>
     {{{body}}}
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
