--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -1,3 +1,6 @@
+/* green rgb(20,141,0)
+   red rgb(220,21,0)*/
+
 *{
     margin: 0px;
     padding: 0px;
@@ -12,13 +15,19 @@ body{
     z-index: -1;
 }
 
+video {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
 .navbar {
     background-color: rgb(255, 245, 201);
 }
 
 .nav-logo{
     width: 7vw;
-    margin: 5px 40% 5px 5%;
+    margin: 5px 32% 5px 5%;
 }
 
 .form-control{
@@ -32,3 +41,96 @@ body{
 .nav-au{
     margin-right: 5vw;
 }
+
+.nav-item > a {
+    color:rgb(20,141,0);
+}
+
+.nav-item > a:hover {
+    color:rgb(11, 71, 0);
+}
+
+.nav-item > a:focus {
+    color:rgb(11, 71, 0);
+}
+
+.dropdown-menu{
+    border-style: none;
+    background-color: rgb(255, 245, 201);
+}
+
+.dropdown-menu > li > a{
+    color:rgb(20,141,0);
+}
+
+.dropdown-menu > li > a:hover{
+    color:rgb(255, 245, 201);
+    background-color: rgb(20,141,0);
+}
+
+.form-control{
+    border: solid rgb(20,141,0) 1px;
+}
+
+.btn-outline-success{
+    background-color: rgb(255, 245, 201);
+    color:rgb(20,141,0);
+    border:solid rgb(20,141,0) 1px;
+}
+
+.btn-outline-success:hover{
+    background-color: rgb(20,141,0);
+    color:rgb(255, 245, 201);
+    border:solid rgb(20,141,0) 1px;
+}
+
+.video-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .welcome{
+    color:white;
+    font-size: 38px;
+    font-weight: bold;
+    background-color: rgba(255,255,255,0.5);
+    width:24vw;
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 5px;
+    margin-top: 13%;
+    margin-left: 38%;
+  }
+
+  .welcome > span{
+    margin-top: 6vh;
+    margin-bottom: 3vh;
+  }
+
+  .enter-options{
+    margin-top: 15px;
+  }
+
+  .enter-options > a{
+    color:white;
+    font-size: 28px;
+    background-color: rgb(20,141,0);
+    border-radius: 5px;
+    padding: 5px 10px 10px 10px;  
+    margin: 0px 20px;
+    text-decoration: none;
+    border:solid white 2px;
+  }
+
+  .enter-options > a:hover{
+    background-color: white;
+    color: rgb(20,141,0);
+    border:solid rgb(20,141,0) 2px;
+  }
