--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,7 @@
-<div>
-    Welcome to TraveLink!
+<div class="welcome">
+    <span>Welcome to TraveLink!</span>
+    <div class="enter-options">
+        <a href="#">Sign Up</a>
+        <a href="#">Log In</a>
+    </div>
 </div>
