Signup and login routes

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <div class="welcome">
     <span>Welcome to TraveLink!</span>
     <div class="enter-options">
-        <a href="#">Sign Up</a>
-        <a href="#">Log In</a>
+        <a href="./auth/signup">Sign Up</a>
+        <a href="./auth/login">Log In</a>
     </div>
 </div>
