--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,7 +20,7 @@
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
                     <li class="nav-item">
-                        <a class="nav-link nav-au" href="#">Countries</a>
+                        <a class="nav-link nav-au" href="./countries">Countries</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link nav-au" href="#">About us</a>
