--- a/views/countries/all-countries.hbs
+++ b/views/countries/all-countries.hbs
@@ -1,4 +1,24 @@
+<h1 class="countries-header">List of all countries</br>In the world!</h1>
+<section class="info-cards">
 {{#each countries}}
+            <div class="display-cards">
+              <div class="card" style="width: 18rem;">
+                <a href="#"><img src="{{this.flags.png}}" class="card-img-top flag-border" alt="Image of flag couldn't be loaded"></a>
+                  <div class="card-body">
+                    <p class="card-text card-name">{{this.name.common}}</p>
+                    <p class="card-text">{{this.continents}}</p>
+                    <p class="card-text">Population: {{this.population}}</p>
+                    <p class="card-text">Capital: {{this.capital}}</p>
+                    {{#each currencies}}
+                    <p class="card-text">Currency Name: {{this.name}} {{this.symbol}}</p>
+                    {{/each}}
+                  </div>
+              </div>
+            </div>
+{{/each}}
+</section>
+
+<!--{{#each countries}}
   <img src="{{this.flags.png}}" alt="" />
   <p>{{this.name.common}}</p>
   {{#each currencies}}
@@ -7,4 +27,4 @@
   Currency Symbol: {{this.symbol}}
 {{/each}}
 
-{{/each}}
+{{/each}}-->
