--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,8 @@
+<div class="video-wrapper">
+      <video autoplay muted loop class="bg-video">
+        <source src="/images/globeweb.webm" type="video/webm"></src>
+      </video>
+    </div>
 <div class="welcome">
     <span>Welcome to TraveLink!</span>
     <div class="enter-options">
