--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,7 +20,7 @@
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
                     <li class="nav-item">
-                        <a class="nav-link nav-au" href="#">Countries</a>
+                        <a class="nav-link nav-au" href="./countries">Countries</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link nav-au" href="#">About us</a>
@@ -36,11 +36,6 @@
             </div>
         </div>
     </nav>
-    <div class="video-wrapper">
-      <video autoplay muted loop class="bg-video">
-        <source src="/images/globeweb.webm" type="video/webm"></src>
-      </video>
-    </div>
     {{{body}}}
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
