hbs css changes

--- a/views/countries/all-countries.hbs
+++ b/views/countries/all-countries.hbs
@@ -3,7 +3,7 @@
 {{#each countries}}
             <div class="display-cards">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="{{this.flags.png}}" class="card-img-top flag-border" alt="Image of flag couldn't be loaded"></a>
+                  <img src="{{this.flags.png}}" class="card-img-top flag-border" alt="Image of flag couldn't be loaded">
                   <div class="card-body">
                     <p class="card-text card-name">{{this.name.common}}</p>
                     <p class="card-text">{{this.continents}}</p>
