--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,6 +30,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">View Profile</a></li>
                             <li><a class="dropdown-item" href="#">Edit Profile</a></li>
+                            <li><a class="dropdown-item" href="#">Log Out</a></li>
                         </ul>
                     </li>
                 </ul>
