--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,15 +12,23 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <img src="/images/logo.png" class="nav-logo">
+            <a href="/" style="margin: 4px 32% 4px 5%"><img src="/images/logo.png" class="nav-logo"></a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search User" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
-                    <li class="nav-item">
-                        <a class="nav-link nav-au" href="./countries">Countries</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link nav-au dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Countries</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Europe</a></li>
+                            <li><a class="dropdown-item" href="#">Asia</a></li>
+                            <li><a class="dropdown-item" href="#">America</a></li>
+                            <li><a class="dropdown-item" href="#">Africa</a></li>
+                            <li><a class="dropdown-item" href="#">Oceania</a></li>
+                            <li><a class="dropdown-item" href="./countries">All countries</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link nav-au" href="#">About us</a>
