--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,23 +22,23 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link nav-au dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Countries</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Europe</a></li>
-                            <li><a class="dropdown-item" href="#">Asia</a></li>
-                            <li><a class="dropdown-item" href="#">America</a></li>
-                            <li><a class="dropdown-item" href="#">Africa</a></li>
-                            <li><a class="dropdown-item" href="#">Oceania</a></li>
+                            <li><a class="dropdown-item" href="./europe">Europe</a></li>
+                            <li><a class="dropdown-item" href="./asia">Asia</a></li>
+                            <li><a class="dropdown-item" href="./america">America</a></li>
+                            <li><a class="dropdown-item" href="./africa">Africa</a></li>
+                            <li><a class="dropdown-item" href="./oceania">Oceania</a></li>
                             <li><a class="dropdown-item" href="./countries">All countries</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-au" href="#">About us</a>
+                        <a class="nav-link nav-au" href="./about">About us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Username Holder{{username}}</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">View Profile</a></li>
                             <li><a class="dropdown-item" href="#">Edit Profile</a></li>
-                            <li><a class="dropdown-item" href="#">Log Out</a></li>
+                            <li><a class="dropdown-item" href="/">Log Out</a></li>
                         </ul>
                     </li>
                 </ul>
