--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,7 +1,7 @@
+<h2 class="page-hd">About us</h2>
 <section class="about-info">
-    <h2>About us</h2>
     <section class="about-display">
-        <img>
+        <img src="../images/fotoTomas.jpeg" class="image-about">
     </section>
     <section class="about-display">
         <p>Hi! We are Francisco Crespo and Tomás Maria and this is our project!</p>
@@ -9,6 +9,8 @@
         <p>Francisco has been to 15 countries and Tomás has been to 19 countries.</p>
         <p>We welcome every fellow travel enthusiast to join us on this journey.</p>
         <p>Feel free to to create an account and keep track of your adventures as well!</p>
-    </section class="about-display">
-        <img>
+    </section>
+    <section class="about-display">
+        <img src="../images/fotoTomas.jpeg" class="image-about">
+    </section>
 </section>
