--- a/views/countries/all-countries.hbs
+++ b/views/countries/all-countries.hbs
@@ -1,4 +1,4 @@
-<h1 class="countries-header">List of all countries</br>In the world!</h1>
+<h2 class="page-hd">List of all countries</br>In the world!</h2>
 <section class="info-cards">
 {{#each countries}}
             <div class="display-cards">
@@ -17,14 +17,3 @@
             </div>
 {{/each}}
 </section>
-
-<!--{{#each countries}}
-  <img src="{{this.flags.png}}" alt="" />
-  <p>{{this.name.common}}</p>
-  {{#each currencies}}
-  Currency Code: {{@key}}
-  Currency Name: {{this.name}}
-  Currency Symbol: {{this.symbol}}
-{{/each}}
-
-{{/each}}-->
