--- a/views/countries/europe.hbs
+++ b/views/countries/europe.hbs
@@ -1,4 +1,4 @@
-<h1 class="countries-header">List of all countries</br>In Europe!</h1>
+<h2 class="page-hd">List of all countries</br>In Europe!</h2>
 <section class="info-cards">
 {{#each countries}}
 {{#if europe}}
