--- a/views/about.hbs
+++ b/views/about.hbs
@@ -3,7 +3,7 @@
     <section class="about-display">
         <img src="../images/fotoTomas.jpeg" class="image-about">
     </section>
-    <section class="about-display">
+    <section class="about-display-info">
         <p>Hi! We are Francisco Crespo and Tomás Maria and this is our project!</p>
         <p>We had this idea because we both love to travel, get to know different countries and cultures and like to keep track of our adventures.</p>
         <p>Francisco has been to 15 countries and Tomás has been to 19 countries.</p>
