--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -76,6 +76,7 @@ video {
     background-color: rgb(255, 245, 201);
     color:rgb(20,141,0);
     border:solid rgb(20,141,0) 1px;
+    transition-duration: 0.5s;
 }
 
 .btn-outline-success:hover{
@@ -127,6 +128,7 @@ video {
     margin: 0px 20px;
     text-decoration: none;
     border:solid white 2px;
+    transition-duration: 0.5s;
   }
 
   .enter-options > a:hover{
@@ -156,6 +158,7 @@ video {
 }
 .flag-border{
     border: solid black 1px;
+    max-height:19vh;
 }
 .display-cards{
     display: flex;
@@ -168,6 +171,11 @@ video {
     padding: 1vh 1vw;
     background-color: rgba(255,255,255,0.5);
     border: solid rgb(20,141,0) 1px;
+    transition-duration: 1s;
+}
+
+.card:hover{
+    transform: scale(1.15);
 }
 
 .card-name {
@@ -180,6 +188,7 @@ video {
     width: 90%;
     margin-left: 5%;
     display: flex;
+    justify-content: center;
 }
 
 .about-info > h2 {
@@ -190,7 +199,15 @@ video {
     width: 30%;
     display: flex;
     justify-content: center;
+    margin-top: 2vh;
 }
 .image-about{
     height: 35vh;
+}
+
+.about-display-info{
+    width: 30%;
+    font-size: 1.2rem;
+    text-align: justify;
+    margin-top: 2vh;
 }
