--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,11 +22,11 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link nav-au dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Countries</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="./countries/europe">Europe</a></li>
-                            <li><a class="dropdown-item" href="countries/asia">Asia</a></li>
-                            <li><a class="dropdown-item" href="countries/america">America</a></li>
-                            <li><a class="dropdown-item" href="countries/africa">Africa</a></li>
-                            <li><a class="dropdown-item" href="countries/oceania">Oceania</a></li>
+                            <li><a class="dropdown-item" href="/europe">Europe</a></li>
+                            <li><a class="dropdown-item" href="/asia">Asia</a></li>
+                            <li><a class="dropdown-item" href="/america">America</a></li>
+                            <li><a class="dropdown-item" href="/africa">Africa</a></li>
+                            <li><a class="dropdown-item" href="/oceania">Oceania</a></li>
                             <li><a class="dropdown-item" href="./countries">All countries</a></li>
                         </ul>
                     </li>
