--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,21 +1,27 @@
-<div id="login-form">
-  <h2>Log In</h2>
-  <form action="/auth/login" method="POST">
-
-    <label> Username
-      <input type="text" name="username" placeholder="Your username" />
-    </label>
-
-
-    <label> Password
-      <input type="password" name="password" placeholder="Your password" />
-    </label>
-
-    <button type="submit">Log In</button>
-
-
-    {{#if errorMessage}}
-      <p class="error">{{errorMessage}}</p>
-    {{/if}}
-  </form>
+<div class="video-wrapper">
+      <video autoplay muted loop class="bg-video">
+        <source src="/images/globeweb.webm" type="video/webm"></src>
+      </video>
 </div>
+<section class="login">
+  <div id="login-form">
+    <form class="login-form" action="/auth/login" method="POST">
+
+      <label class="login-signup-text"> Username:
+        <input type="text" name="username" placeholder="Your username" />
+      </label>
+
+
+      <label class="login-signup-text"> Password:
+        <input type="password" name="password" placeholder="Your password" />
+      </label>
+
+      <button class="login-signup-btns" type="submit">Log In</button>
+
+
+      {{#if errorMessage}}
+        <p class="error">{{errorMessage}}</p>
+      {{/if}}
+    </form>
+  </div>
+</section>
