--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -7,13 +7,13 @@
   <div id="login-form">
     <form class="login-form" action="/auth/login" method="POST">
 
-      <label class="login-signup-text"> Username:
-        <input type="text" name="username" placeholder="Your username" />
+      <label class="login-signup-text">
+        <input style="text-align:center" type="text" name="username" placeholder="Your username" />
       </label>
 
 
-      <label class="login-signup-text"> Password:
-        <input type="password" name="password" placeholder="Your password" />
+      <label class="login-signup-text">
+        <input style="text-align:center" type="password" name="password" placeholder="Your password" />
       </label>
 
       <button class="login-signup-btns" type="submit">Log In</button>
