--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -7,16 +7,16 @@
   <div id="form">
     <form class ="signup-form" action="/auth/signup" method="POST">
       
-      <label class="login-signup-text"> Email:
-        <input type="email" name="email" placeholder="Your email" />
+      <label class="login-signup-text">
+        <input style="text-align:center" type="email" name="email" placeholder="Your email" />
       </label>
 
-      <label class="login-signup-text"> Username:
-        <input type="text" name="username" placeholder="Your username" />
+      <label class="login-signup-text">
+        <input style="text-align:center" type="text" name="username" placeholder="Your username" />
       </label>
 
-      <label class="login-signup-text"> Password:
-        <input type="password" name="password" placeholder="Your password" />
+      <label class="login-signup-text">
+        <input style="text-align:center" type="password" name="password" placeholder="Your password" />
       </label>
 
       <button class="login-signup-btns" type="submit">Sign Up</button>
