--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -36,8 +36,8 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Username Holder{{username}}</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">View Profile</a></li>
-                            <li><a class="dropdown-item" href="#">Edit Profile</a></li>
+                            <li><a class="dropdown-item" href="users/profile">View Profile</a></li>
+                            <li><a class="dropdown-item" href="users/edit-profile">Edit Profile</a></li>
                             <li><a class="dropdown-item" href="/">Log Out</a></li>
                         </ul>
                     </li>
