changes and fixes

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -5,7 +5,7 @@
 </div>
 <section class="login">
   <div id="login-form">
-    <form class="login-form" action="/auth/login" method="POST">
+    <form class="login-form" action="/login" method="POST">
 
       <label class="login-signup-text">
         <input style="text-align:center" type="text" name="username" placeholder="Your username" />
