--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -5,7 +5,7 @@
 </div>
 <section class="signup">
   <div id="form">
-    <form class ="signup-form" action="/auth/signup" method="POST">
+    <form class ="signup-form" action="/signup" method="POST">
       
       <label class="login-signup-text">
         <input style="text-align:center" type="email" name="email" placeholder="Your email" />
