--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,7 +6,7 @@
 <div class="welcome">
     <span>Welcome to TraveLink!</span>
     <div class="enter-options">
-        <a href="./auth/signup">Sign Up</a>
-        <a href="./auth/login">Log In</a>
+        <a href="/signup">Sign Up</a>
+        <a href="/login">Log In</a>
     </div>
 </div>
