--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,4 +1,6 @@
-<h2>Welcome {{username}}!</h2>
+
+
+<h2>Welcome {{foundUser.username}}!</h2>
 <a class="profile-btns">Go to your visited countries!</a>
 <a class="profile-btns">Add visited countries!</a>
 <a class="profile-btns">Edit Profile</a>
