--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -34,11 +34,11 @@
                         <a class="nav-link nav-au" href="./about">About us</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Username Holder{{username}}</a>
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Traveler Tab</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="users/profile">View Profile</a></li>
-                            <li><a class="dropdown-item" href="users/edit-profile">Edit Profile</a></li>
-                            <li><a class="dropdown-item" href="/">Log Out</a></li>
+                            <li><a class="dropdown-item" href="/profile">View Profile</a></li>
+                            <li><a class="dropdown-item" href="/edit-profile">Edit Profile</a></li>
+                            <li><a class="dropdown-item" href="/logout">Log Out</a></li>
                         </ul>
                     </li>
                 </ul>
