--- a/views/users/edit-profile.hbs
+++ b/views/users/edit-profile.hbs
@@ -4,9 +4,19 @@
 <form action="/edit-profile" method="post">
 
 <div class="form-div">
-  <label for="name">Username:</label>
-  <input type="text" name="username" id="username" value="{{username}}">
+  <label for="name">First Name:</label>
+  <input type="text" name="firstName" id="firstName" value="{{firstName}}">
 </div>
+
+<div class="form-div">
+  <label for="name">Last Name:</label>
+  <input type="text" name="lastName" id="lastName" value="{{lastName}}">
+</div>
+<div class="form-div">
+  <label for="name">Age:</label>
+  <input type="number" name="age" id="age" value="{{age}}">
+</div>
+
 
 
 
