changes to routes, hbs and styles

--- a/views/users/add-visited.hbs
+++ b/views/users/add-visited.hbs
@@ -1,9 +1,13 @@
 <h2 class="page-hd">Add a Visited Country</h2>
 
-<form action="/create" method="post">
+<form action="/add-visited" method="post">
 <div>
-  <label for="name">Name:</label>
-  <select></select>
+  <label for="country">Select Country:</label>
+      <select name='visitedCountries' id='country'>
+          {{#each countriesList}}
+            <option name="visitedCountries" value='{{this._id}}'>{{this.name}}</option>
+          {{/each}}
+      </select>
 </div>
 
 <div>
@@ -22,7 +26,7 @@
 </div>
 
 <div>
-  <label for="description">Description:</label>
+  <label for="description">Experiences:</label>
   <input type="textarea" name="description" id="description">
 </div>
 
