--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -295,15 +295,20 @@ video {
     margin-top: 5vh;
     text-align: center;
     margin-bottom: 10vh;
+    font-weight: bold;
+    color: rgb(20,141,0);
 }
 
 .profile-info{
     padding: 1vh 1vw;
     display: flex;
-    width:15%;
+    width:12%;
     margin-left: 10%;
     justify-content: center;
     flex-direction: column;
+    border: solid black 1px;
+    background-color: white;
+    align-items: center;
 }
 
 .profile-picture{
@@ -322,4 +327,44 @@ video {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2vw;
+}
+
+.edit-btn{
+    text-decoration: none;
+    color:white;
+    font-size: 1.1rem;
+    background-color: rgb(20,141,0);
+    border-radius: 5px;
+    padding: 0.5vh 0.5vw;  
+    text-decoration: none;
+    border:solid white 2px;
+    transition-duration: 0.5s;
+    width:6vw;
+    text-align: center;
+}
+
+.edit-btn:hover{
+    background-color: white;
+    color: rgb(20,141,0);
+    border:solid rgb(20,141,0) 2px;
+}
+
+.form-div{
+    background-color: darkslategrey;
+    margin: 5vh 0vw;
+}
+
+.edit-profile{
+    background-color: brown;
+    margin-left: 10%;
+}
+
+.edit-form{
+    display: flex;
+    justify-content: center;
+    width:60%;
+    margin-left:20%;
+    background-color: brown;
+    flex-direction: column;
+    align-items: center;
 }
