changes and fixes

--- a/views/users/add-visited.hbs
+++ b/views/users/add-visited.hbs
@@ -10,9 +10,9 @@
       </select>
 </div>
 
-<div>
+{{!-- <div>
   <label for="rating">Rating:</label>
-  <input type="number" name="rating" id="rating">
+  <input type="number" name="rating" id="rating" min="1" max="10">
 </div>
 
 <div>
@@ -23,11 +23,11 @@
 <div>
   <label for="funFacts">Fun Facts:</label>
   <input type="textarea" name="funFacts" id="funFacts">
-</div>
+</div> --}}
 
 <div>
-  <label for="description">Experiences:</label>
-  <input type="textarea" name="description" id="description">
+  <label for="experiences">Experiences:</label>
+  <input type="textarea" name="experiences" id="experiences">
 </div>
 
   <button type="submit" class="btn">Add visited country</button>
