--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -141,7 +141,6 @@ video {
 .info-cards{
     width: 70%;
     margin-left: 15%;
-    padding-top:10vh;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 2vw;
@@ -155,6 +154,7 @@ video {
 .page-hd{
     text-align: center;
     margin-top: 5vh;
+    margin-bottom: 5vh;
     color:black;
 }
 .flag-border{
@@ -165,6 +165,7 @@ video {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
+    margin-left: 20%;
 }
 
 .card {
@@ -173,6 +174,8 @@ video {
     background-color: rgba(255,255,255,0.5);
     border: solid rgb(20,141,0) 1px;
     transition-duration: 1s;
+    display: flex;
+    justify-content: center;
 }
 
 .card:hover{
@@ -325,7 +328,7 @@ video {
 .visited-display{
     width:65%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 2vw;
 }
 
@@ -354,7 +357,6 @@ video {
 }
 
 .edit-profile{
-    background-color: brown;
     margin-left: 10%;
 }
 
@@ -370,4 +372,13 @@ video {
     padding-top:4vh;
     padding-bottom: 4vh;
     border: solid black 1px;
+}
+
+.visited-wrapper{
+    width: 100%;
+    display: flex;
+}
+
+.profile-layout{
+    display: flex;
 }
