--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,11 +27,11 @@
                             <li><a class="dropdown-item" href="/america">America</a></li>
                             <li><a class="dropdown-item" href="/africa">Africa</a></li>
                             <li><a class="dropdown-item" href="/oceania">Oceania</a></li>
-                            <li><a class="dropdown-item" href="./countries">All countries</a></li>
+                            <li><a class="dropdown-item" href="/countries">All countries</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-au" href="./about">About us</a>
+                        <a class="nav-link nav-au" href="/about">About us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Traveler Tab</a>
