--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <div class="video-wrapper">
       <video autoplay muted loop class="bg-video">
-        <source src="/images/globeweb.webm" type="video/webm"></src>
+        <source src="/images/globe.mp4" type="video/mp4"></src>
       </video>
 </div>
 <div class="welcome">
